syntax = "proto3";
package bx2cloud;

option go_package = "github.com/BenasB/bx2cloud/internal/api/pb";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service ContainerService {
    rpc Get (ContainerIdentificationRequest) returns (Container);
    rpc List (google.protobuf.Empty) returns (stream Container);
    rpc Create (ContainerCreationRequest) returns (Container);
    rpc Delete (ContainerIdentificationRequest) returns (google.protobuf.Empty);
    // rpc Exec (ContainerIdentificationRequest) returns (?);
    // rpc Start (ContainerIdentificationRequest) returns (?);
    // rpc Stop (ContainerIdentificationRequest) returns (?);
}

message ContainerIdentificationRequest {
    uint32 id = 1;
}

message ContainerCreationRequest {
    uint32 subnetwork_id = 1;
    string image = 2;
}

message Container {
    uint32 id = 1;
    fixed32 address = 2;
    fixed32 prefix_length = 3;
    uint32 status = 4;
    string image = 5;
    google.protobuf.Timestamp createdAt = 6;
}